--- a/NavigineDemo/app/src/main/res/layout/activity_splash.xml
+++ b/NavigineDemo/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
         android:scaleType="fitXY"
         android:src="@drawable/elm_splash"/>
     
-    <TextView android:id="@+id/splash__error_label"
+    <TextView android:id="@+id/splash__status_label"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginLeft="20dp"
